Fix webkit macOS scrollbar misbehavior

--- a/src/ScrollBox/scrollBox.css
+++ b/src/ScrollBox/scrollBox.css
@@ -14,6 +14,12 @@
         width:      100%;
         height:     100%;
         overflow:   scroll;
+
+        /* force webkit scrollbars to be always visible on macOS */
+        &::-webkit-scrollbar
+        {
+            visibility: visible;
+        }
     }
 
     .scrollBarHorizontal
